--- a/RankFit/LaunchScreen/Base.lproj/LaunchScreen.storyboard
+++ b/RankFit/LaunchScreen/Base.lproj/LaunchScreen.storyboard
@@ -17,19 +17,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RankFit.png" translatesAutoresizingMaskIntoConstraints="NO" id="zZb-tY-xAI">
-                                <rect key="frame" x="75" y="208.66666666666663" width="240" height="240"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="zZb-tY-xAI" secondAttribute="height" multiplier="1:1" id="yZs-vH-3I8"/>
-                                </constraints>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RankFit_icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="7op-Vv-3As">
+                                <rect key="frame" x="64" y="-183.66666666666663" width="262" height="1024.3333333333333"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="zZb-tY-xAI" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-100" id="ICa-eU-v21"/>
-                            <constraint firstItem="zZb-tY-xAI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="75" id="d8u-oz-QIr"/>
-                            <constraint firstItem="zZb-tY-xAI" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="eQc-bc-t9O"/>
+                            <constraint firstItem="7op-Vv-3As" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="CEk-b9-Rcx"/>
+                            <constraint firstItem="7op-Vv-3As" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-100" id="UtU-VQ-3PC"/>
+                            <constraint firstItem="7op-Vv-3As" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="64" id="XSJ-fz-cLj"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -39,7 +36,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="RankFit.png" width="1024" height="1024"/>
+        <image name="RankFit_icon.png" width="1024" height="1024"/>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
