--- a/RankFit/Register/Register.storyboard
+++ b/RankFit/Register/Register.storyboard
@@ -18,15 +18,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="랭크핏" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uEZ-dE-gOv">
-                                <rect key="frame" x="50" y="278.66666666666669" width="290" height="100"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo1" translatesAutoresizingMaskIntoConstraints="NO" id="3Vu-8o-e8y">
+                                <rect key="frame" x="20" y="215.33333333333337" width="350" height="186.66666666666663"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="F6T-Uw-9h3"/>
+                                    <constraint firstAttribute="width" secondItem="3Vu-8o-e8y" secondAttribute="height" multiplier="15:8" id="umb-uf-MDb"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="70"/>
-                                <color key="textColor" systemColor="linkColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="32j-YN-DF1">
                                 <rect key="frame" x="50" y="710" width="290" height="50"/>
                                 <subviews>
@@ -63,16 +60,17 @@
                         <viewLayoutGuide key="safeArea" id="0TO-JQ-mhD"/>
                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="uEZ-dE-gOv" firstAttribute="leading" secondItem="0TO-JQ-mhD" secondAttribute="leading" constant="50" id="NHI-qd-1Wg"/>
+                            <constraint firstItem="3Vu-8o-e8y" firstAttribute="leading" secondItem="0TO-JQ-mhD" secondAttribute="leading" constant="20" id="BMO-Pe-tFW"/>
+                            <constraint firstItem="3Vu-8o-e8y" firstAttribute="centerX" secondItem="0TO-JQ-mhD" secondAttribute="centerX" id="bg9-gi-UJH"/>
                             <constraint firstItem="32j-YN-DF1" firstAttribute="leading" secondItem="0TO-JQ-mhD" secondAttribute="leading" constant="50" id="dsA-Mr-Yw1"/>
                             <constraint firstItem="0TO-JQ-mhD" firstAttribute="trailing" secondItem="32j-YN-DF1" secondAttribute="trailing" constant="50" id="f1J-xx-72R"/>
                             <constraint firstItem="0TO-JQ-mhD" firstAttribute="bottom" secondItem="32j-YN-DF1" secondAttribute="bottom" constant="50" id="mmZ-K6-LqC"/>
-                            <constraint firstItem="uEZ-dE-gOv" firstAttribute="centerX" secondItem="0TO-JQ-mhD" secondAttribute="centerX" id="mtF-fi-wtn"/>
-                            <constraint firstItem="uEZ-dE-gOv" firstAttribute="centerY" secondItem="0TO-JQ-mhD" secondAttribute="centerY" constant="-100" id="oEc-8h-ivI"/>
+                            <constraint firstItem="3Vu-8o-e8y" firstAttribute="centerY" secondItem="0TO-JQ-mhD" secondAttribute="centerY" constant="-120" id="vNy-Kz-Jsf"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="buttonView" destination="32j-YN-DF1" id="Gpl-cc-xKa"/>
+                        <outlet property="imgView" destination="3Vu-8o-e8y" id="gnX-53-Mnb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SnC-QC-2NL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1168,6 +1166,7 @@
     </scenes>
     <resources>
         <image name="checkmark.rectangle" catalog="system" width="128" height="93"/>
+        <image name="logo1" width="3000" height="1505"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
