--- a/RankFit/Setting/Version/Version.storyboard
+++ b/RankFit/Setting/Version/Version.storyboard
@@ -17,30 +17,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RankFit.png" translatesAutoresizingMaskIntoConstraints="NO" id="ApJ-t3-iVk">
-                                <rect key="frame" x="75" y="183.66666666666663" width="240" height="240"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="ApJ-t3-iVk" secondAttribute="height" multiplier="1:1" id="A8Q-jd-FHr"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="앱 버전: 1.0.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yrz-YM-pGh">
-                                <rect key="frame" x="146.33333333333334" y="473.66666666666669" width="97.666666666666657" height="21.666666666666686"/>
+                                <rect key="frame" x="146.33333333333334" y="452" width="97.666666666666657" height="21.666666666666742"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo1" translatesAutoresizingMaskIntoConstraints="NO" id="ApJ-t3-iVk">
+                                <rect key="frame" x="20" y="215.33333333333337" width="350" height="186.66666666666663"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ApJ-t3-iVk" secondAttribute="height" multiplier="15:8" id="OZk-fR-Lw2"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="ApJ-t3-iVk" firstAttribute="centerY" secondItem="vDu-zF-Fre" secondAttribute="centerY" constant="-125" id="HES-tt-iP9"/>
-                            <constraint firstItem="ApJ-t3-iVk" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="75" id="JXv-S9-TEl"/>
                             <constraint firstItem="Yrz-YM-pGh" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="MKj-Tu-O6V"/>
+                            <constraint firstItem="ApJ-t3-iVk" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="oJq-qJ-PCY"/>
                             <constraint firstItem="Yrz-YM-pGh" firstAttribute="top" secondItem="ApJ-t3-iVk" secondAttribute="bottom" constant="50" id="syq-fF-sR7"/>
+                            <constraint firstItem="ApJ-t3-iVk" firstAttribute="centerY" secondItem="vDu-zF-Fre" secondAttribute="centerY" constant="-120" id="v73-dG-gH1"/>
                             <constraint firstItem="ApJ-t3-iVk" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="yK0-pu-Byh"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="imgView" destination="ApJ-t3-iVk" id="ziH-R5-zvT"/>
                         <outlet property="versionLabel" destination="Yrz-YM-pGh" id="MeL-9t-PvQ"/>
                     </connections>
                 </viewController>
@@ -50,7 +51,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="RankFit.png" width="1024" height="1024"/>
+        <image name="logo1" width="3000" height="1505"/>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
